# GIRAFFE

./: .gitignore  GIRAFFE.sln  README.md  VirtualImageGenerator.sln
GIRAFFE/: CMakeLists.txt  Doxyfile  GIRAFFE.vcxproj  match_pairs_lightglue.py
GIRAFFE/docs/html/: _bounding_box_8hpp_source.html  _coordinate_image_8hpp_source.html  _data_manager_8h_source.html  _im_calculator_8hpp_source.html  _laser_point_8h_source.html  _logfile_printer_8h_source.html  _matching_8h_source.html  _model_8h_source.html  _perspective_image_8h_source.html  _point_loader_8h_source.html  _utils_8h_source.html  annotated.html  class_bounding_box-members.html  class_bounding_box.html  class_coordinate_image-members.html  class_coordinate_image.html  class_data_manager-members.html  class_data_manager.html  class_im_calculator-members.html  class_im_calculator.html  class_laser_point-members.html  class_laser_point.html  class_log_file-members.html  class_log_file.html  class_matching-members.html  class_matching.html  class_model-members.html  class_model.html  class_perspective_image-members.html  class_perspective_image.html  class_point_loader-members.html  class_point_loader.html  class_utils-members.html  class_utils.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  (+10 more)
GIRAFFE/docs/latex/: _bounding_box_8hpp_source.tex  _coordinate_image_8hpp_source.tex  _data_manager_8h_source.tex  _im_calculator_8hpp_source.tex  _laser_point_8h_source.tex  _perspective_image_8h_source.tex  class_data_manager.tex  class_im_calculator.tex  class_log_file.tex  class_point_loader.tex  stdafx_8h_source.tex  struct_coordinate_image_1_1_coordinate.tex  struct_model_1_1_referenced_points.tex  targetver_8h_source.tex
GIRAFFE/include/: DataManager.h  ImCalculator.hpp  Matching.h  PerspectiveImage.h  Utils.h
GIRAFFE/src/: BoundingBox.cpp  GIRAFFE.cpp  ImCalculator.cpp  Matching.cpp  Model.cpp  PerspectiveImage.cpp  PointLoader.cpp  stdafx.cpp
VirtualImageGenerator/: ASiftDetector.cpp  ASiftDetector.h  AccurateMatcher.cpp  AccurateMatcher.h  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CoordinateImage.cpp  CoordinateImage.hpp  DLT.hpp  DataManager.h  ImCalculator.cpp  ImCalculator.hpp  LaserPoint.cpp  LaserPoint.h  LogfilePrinter.h  Matching.cpp  Matching.h  Mathematics.h  Modell.cpp  Modell.h  Modell_OCV.cpp  Modell_OCV.h  PerspectiveImage.cpp  PerspectiveImage.h  PointLoader.cpp  PointLoader.h  SpectralIndices.h  Utils.h  VirtualImageGenerator.cpp  VirtualImageGenerator.vcxproj  VirtualImageGenerator.vcxproj.filters  aabb.h  demo_lib_sift.h  fillImages.hpp  interface.h  kdtree.h  kdtreeknoten.h  nachbardaten.h  opencv_includes.h  (+6 more)
VirtualImageGenerator/d2net/: README.txt  START.bat  caller.bat  extract_keypoints.py  image_list_waterlines.txt  requirements.txt
VirtualImageGenerator/docs/html/: _coordinate_image_8hpp_source.html  _data_manager_8h_source.html  _im_calculator_8hpp_source.html  _perspective_image_8h_source.html  _utils_8h_source.html  class_bounding_box.html  class_coordinate_image-members.html  class_coordinate_image.html  class_im_calculator.html  class_laser_point.html  class_log_file.html  class_perspective_image.html  class_point_loader.html  class_utils.html  doxygen_crawl.html  files.html  functions_func.html  stdafx_8h_source.html  struct_coordinate_image_1_1_coordinate-members.html  struct_coordinate_image_1_1_coordinate.html  targetver_8h_source.html
VirtualImageGenerator/docs/latex/: _logfile_printer_8h_source.tex  _matching_8h_source.tex  _model_8h_source.tex  _point_loader_8h_source.tex  _utils_8h_source.tex  annotated.tex  files.tex  (+9 more)
VirtualImageGenerator/include/: BoundingBox.hpp  CoordinateImage.hpp  DataManager.h  ImCalculator.hpp  LaserPoint.h  LogfilePrinter.h  Matching.h  Model.h  Modell_OCV.h  PerspectiveImage.h  PointLoader.h  Utils.h  vek.h
VirtualImageGenerator/src/: BoundingBox.cpp  CoordinateImage.cpp  GIRAFFE.cpp  ImCalculator.cpp  Matching.cpp  Model.cpp  Modell_OCV.cpp  PerspectiveImage.cpp  PointLoader.cpp  VirtualImageGenerator.cpp
(+34 files in other folders)
